client/k8s/2_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site
  name: site
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  strategy: {}
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - image: localhost:5001/client:latest
        name: site
        imagePullPolicy: IfNotPresent
