client/k8s/3_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: site
  name: site
  namespace: frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: site
  type: NodePort
