client/k8s/4_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: frontend
spec:
  defaultBackend:
    service:
      name: site
      port:
        number: 3000
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: site
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#   namespace: frontend
# spec:
#   rules:
#     - host: orimboard.io
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: site
#                 port:
#                   number: 3000
